--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ function MM_swapImage() { //v3.0
 </script>
 </head>
 
-<body onLoad="MM_preloadImages('imagenes/imagen1.jpg','imagenes/popo2.jpg','imagenes/imagen8.jpg','imagenes/imagen12.jpg')">
+<body onLoad="MM_preloadImages('imagenes/imagen1.jpg','imagenes/popo2.jpg','imagenes/imagen8.jpg','imagenes/imagen12.jpg','imagenes/imagen16.jpg','imagenes/imagenescolima3.jpg')">
 <div data-role="page" id="principal" data-theme="c">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
   <h1>Los volcanes de Popocatepetl y el de Colima  </h1>
   </div>
   <div>
     <!-- Start WOWSlider.com -->
-<iframe src="visor/indexwow.html" style="width:960px;height:360px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor/indexwow.html" style="width:960px;height:270px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
   </div>
   <div></div>
@@ -104,7 +104,7 @@ function MM_swapImage() { //v3.0
    </li>
   </ul>
 </div>
-<div data-role="footer" align="center" data-theme="c">
+<div data-role="footer" align="center" data-theme="b">
  
   <div>
     <h4>APLICACION TRES</h4>
@@ -121,11 +121,11 @@ function MM_swapImage() { //v3.0
   <div data-role="content" align="center">
    <div>
      <p>El Popocatépetl  es un volcán activo localizado en el centro de México, en los límites territoriales de los estados de Morelos, Puebla y México. Se localiza a unos 72 km al sureste de la Ciudad de México, 43 km de Puebla, 63 km de Cuernavaca, y 53 km de Tlaxcala.</p>
-     <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagenes/imagen1.jpg',1)"><img src="imagenes/imagen6.jpg" width="318" height="231" id="Image4"></a></p>
+     <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagenes/imagen1.jpg',1)"><img src="imagenes/imagen6.jpg" width="241" height="178" id="Image4"></a></p>
      <p>Tiene una forma cónica simétrica y está unido por la parte norte con el Iztaccíhuatl mediante un paso montañoso conocido como Paso de Cortés. El volcán tiene glaciares perennes cerca de la boca del cono, en la punta de la montaña. Es el segundo volcán más alto de México, con una altitud máxima de 5500 metros sobre el nivel del mar, sólo después del Citlaltépetl de 5610 msnm.</p>
    </div>
   </div>
-  <div data-role="footer" data-theme="b">
+  <div data-role="footer" data-theme="c">
   <h4>APLICACION 3</h4>
   <h4>VOLCAN POPOCATEPETL</h4>
   <h4>TMM</h4>
@@ -146,7 +146,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
       <p>Las dos principales cimas del Popo son el Pico Mayor y el Espinazo del Diablo, ambos alrededor del cráter.
     Es el segundo volcán más alto de nuestro país; el primero lo ocupa el Pico de Orizaba o Citlaltépetl con 5,747 m. y el tercero el Iztaccíhuatl o Ixtaccíhualtl ( Con quien esta unido por la parte norte mediante un paso montañoso conocido como Paso de Cortés) con 5,286 m. de altura.</p></div>
  </div>
- <div data-role="footer" data-theme="b">
+ <div data-role="footer" data-theme="c">
        <h4>APLICACION 3</h4>
        <h4>VOLCAN POPOCATEPETL</h4>
        <h4>TMM</h4>
@@ -161,7 +161,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
  <div data-role="content" align="center">
    <div>
       <p>En las últimas 24 horas, por medio de los registros sísmicos del sistema de monitoreo del volcán Popocatépetl, se identificaron 88 exhalaciones de muy baja intensidad, que solo fueron acompañadas por emisiones de vapor de agua y gases.</p>
-      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/imagen8.jpg',1)"><img src="imagenes/imagen7.jpg" width="704" height="480" id="Image5"></a></p>
+      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/imagen8.jpg',1)"><img src="imagenes/imagen7.jpg" width="478" height="292" id="Image5"></a></p>
       <p>Durante la noche se observó ligera incandescencia sobre el cráter, que aumentaba al momento de las exhalaciones más importantes. 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
         <img src="imagenes/imagen9.jpg" width="50%" height="50%">
@@ -177,10 +177,10 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
   <br>
   </div>
   <div>
-  <img src="imagenes/imagen10.jpg" width="50%" height="50%"> </div>
+  <img src="imagenes/imagen10.jpg" width="50%" height="50%" align="middle"> </div>
   </div>
   </div>
- <div data-role="footer" data-theme="b">
+ <div data-role="footer" data-theme="c">
     <h4>APLICACION 3</h4>
     <h4>VOLCAN POPOCATEPETL</h4>
     <h4>TMM</h4>
@@ -217,23 +217,179 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
   </div>
   </div>
   <h2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE ERUPCION</CENTER></h2>
-  <center><P>Desde hace varias semanas el volcán ha incrementado su actividad y se han presentado episodios de crecimiento del domo de lava en el interior del cráter, que van acompañados de la emisión de fragmentos incandescentes.</P></center>
-  <center><img src="imagenes/imagen4.jpg" width="50%" height="50%"></center>
-  <center><p>La situación implica que los sistemas de Protección Civil preparen personal, equipos de evacuación y albergues, además de alertar a los sistemas de navegación aérea, limitar el acceso a zonas aledañas al volcán y poner en marcha medidas preventivas contra caída de ceniza y fragmentos.</p></center>
- <center><p>La población de las comunidades cercanas al volcán en los estados de México, Morelos, Puebla y Tlaxcala, deberá mantener un alto nivel de atención a la información oficial; ensayar desplazamientos a sitios seguros y de reunión, además de albergues.</p></center>
+   <h2><center>MEDIDAS PREVENTIVAS ANTES DE QUE EL VOLCAN HAGA ERUPCION</center></h2>
+   <li>Infórmate si tu vivienda, sitio donde trabajas o estudias está en zona de peligro en    casode erupción</li>
+   <li>Discute con tu familia, amigos y vecinos sobre lo que podrían hacer frente a los    diferentes peligros volcánicos, es decir armar un plan de contingencia.</li>
+   <li>Participa en simulacros programados por autoridades para poner a prueba tu plan de    contingencia</li>
+   <li>Si tienes cualquier duda sobre los peligros volcánicos, pide ayuda a los expertos del    Instituto Geofísico.</li>
+  <center><img src="imagenes/imagen15.jpg" width="50%" height="50%"></center>
+  <h4><center>CUANDO UN VOLCAN VA A HACER ERUPCION</center></h4>
+  <LI>Revisa tu plan de contingencia</LI>
+  <LI>No creer rumores o  información proporcionada por gente no autorizada</LI>
+  <LI>Preparar un kit de emergencia: radio portátil, linterna con pilas, botiquín, agua embotellada, alimentos que puedan consumirse sin cocinar, abrelatas/cuchillo, copias de tus documentos, lista de teléfonos importantes</LI>
+<LI>Trata de mantenerte cerca de tu familia.</LI>
+<LI>Preocuparte por tu buen estado y seguridad, ya que solo entonces podrás brindar ayuda efectiva a los demás.</LI>
+<LI>
+  <div align="center"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image12','','imagenes/imagen16.jpg',1)"><img src="imagenes/imagen17.jpg" width="299" height="168" id="Image12"></a></div>
+</LI>
+  <div data-role="main" class="ui-content">
+    <div data-role="collapsible" data-content-theme="false">
+  <h1>INFORMACION ACERCA DE LAS FASES DEL VOLCAN POPOCATEPETL</h1>
+  <div>
+  <p>Esta es alguna informacion sobre las fases:
+  <H2><CENTER>FASE COLOR VERDE:</CENTER><H2>
+  <p>El volcán se encuentra en un estado no-eruptivo;
+ o, después de un cambio desde un nivel más alto:
+se considera que la actividad volcánica ha cesado y el volcán ha vuelto a su estado normal, no-eruptivo.</p>
+  <img src="imagenes/fases.png" width="45%" height="50%" align="middle">
+  <H2><CENTER>FASE COLOR AMARILLO</CENTER><H2>
+  <p>El volcán experimenta un aumento significativo de  la actividad volcánica;
+o, después de un cambio desde un nivel más alto:
+la actividad volcánica ha disminuido considerablemente, pero se recomienda precaucción</p>
+  <img src="imagenes/fase1.jpg" width="50%" height="50%"> 
+  <H2><CENTER>FASE COLOR NARANJA:</CENTER><H2>
+  <p>El volcán muestra un aumento en la actividad volcánica con probabilidades de erupción
+o, después de un cambio desde un nivel más alto:
+erupción en proceso con apenas emisión de cenizas (especificar la altura de la columna de cenizas si fuera posible)</p>
+<img src="imagenes/fase1.jpg" width="50%" height="50%"> 
+<H2><CENTER>FASE COLOR ROJO </CENTER></H2>
+<P>Se preve que la erupción será inminente con probabilidades de emisión significativa de cenizas a la atmósfera o,erupción en proceso con emisión significativa de cenizas (especificar la altura de la columna de cenizas si fuera posible)</P>
+  <br>
+  </div>
+  <div>
+  <CENTER>
+ <img src="imagenes/fase1.jpg" width="50%" height="50%">  </CENTER> </div>
+  </div>
+</div>
+ <div data-role="footer" data-theme="c">
+     <h4>APLICACION 3</h4>
+     <h4>VOLCAN POPOCATEPETL</h4>
+     <h4>TMM</h4>
+  </div>
+</div>
+</div>
+
+<div data-role="page" id="Pagina5" data-add-back-btn="true" data-theme="c">
+    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+        <h1>UBICACION DEL VOLCAN DE COLIMA</h1>
+ </div>
+ <!-- Start WOWSlider.com -->
+<iframe src="visor2/indexwow2.html" style="width:960px;height:280px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<!-- End WOWSlider.com -->
+ <div data-role="content" align="center">
+   <div>
+     <p>El volcán de colima es un estratovolcán ubicado en los límites de los estados de Colima y Jalisco, en México. El volcán de Colima o volcán de Fuego se eleva entre 3870 y 3940 msnm, y su altura se encuentra en un constante cambio gracias a la constante actividad que ha presentado durante los últimos años; por eso resulta difícil decir con exactitud cuál es en estos momentos.</p>
+     <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image21','','imagenes/imagenescolima3.jpg',1)"><img src="imagenes/imagencolima.jpg" width="385" height="272" id="Image21"></a></p>
+     <p>Este material cuenta con derechos de propiedad intelectual. De no existir previa autorización por escrito de EL UNIVERSAL, Compañía Periodística Nacional S. A. de C. V., queda expresamente prohibida la publicación, retransmisión, distribución, venta, edición y cualquier otro uso de los contenidos (Incluyendo, pero no limitado a, contenido, texto, fotografías, audios, videos y logotipos). Si desea hacer uso de este contenido por favor comuníquese a la Agencia de Noticias de El Universal, al 57091313 extensión 2425. Muchas gracias.</p>
+     </div>
+ </div>
+ <div data-role="footer" data-theme="c">
+    <h4>APLICACION 3</h4>
+    <H4>VOLCAN POPOCATEPETL</H4>
+    <H4>TMM</H4>
+  </div>
+</div>
+</div>
+
+<div data-role="page" id="Pagina6" data-add-back-btn="true" data-theme="c">
+  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+  <h1>Dimensiones del vocan de colima</h1>
+  </div>
+  <div data-role="content" align="center">
+   <div>
+     <p>gggrgrtryhtytuytuytu
+     trytytuytuytu
+     htrutyiuyoiuoipip</p>
+  </div>
+  </div>
+  <div data-role="footer" data-theme="c">
+  <h4>APLICACION 3</h4>
+  <H4>VOLCAN POPOCATEPETL</H4>
+  <H4>TMM</H4>
+  </div>
+</div>
+</div>
+
+<div data-role="page" id="Pagina7" data-add-back-btn="true" data-theme="c">
+  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+  <h1>Dependencias del monitoreo del volcan de colima</h1>
+  </div>
+  <div data-role="content" align="center">
+   <div>
+     <p>htjrtiyiuypouypuggffghhg
+     hvjhgghghghhghgghghghggghhhh
+     hfggggggggggggggggggggggggdf</p>
+  </div>
+  </div>
+  <div data-role="footer" data-theme="c">
+  <h4>APLICACION 3</h4>
+  <H4>VOLCAN POPOCATEPETL</H4>
+  <H4>TMM</H4>
+  </div>
+</div>
+</div>
+
+<div data-role="page" id="Pagina8" data-add-back-btn="true" data-theme="c">
+   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+      <h1>Medidas Preventivas en caso de caida de ceniza y en caso de erupcion</h1>
+ </div>
+ <div data-role="content" align="center">
+    <div>
+          <H2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE CAIDA DE CENIZA</CENTER></H2>
+     <li>No humedecer la ceniza a fin de evitar taponamientos en el sistema de alcantarillado</li>
+     <li>Mantén la calma.</li>
+     <li>Utiliza medios electrónicos y de comunicación para obtener información confiable que den las autoridades de Protección Civil sobre la caída de ceniza y atiende siempre sus instrucciones</li>
+     <li>No realices actividades al aire libre y si es posible no salgas.</li>
+     <li>Cierra puertas y ventanas y coloca toallas o trapos húmedos en las rendijas.</li>
+      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/imagen12.jpg',1)"><img src="imagenes/imagen11.jpg" width="272" height="185" id="Image7"></a></p> 
+      <li>Si es posible no conduzcas, si tienes que hacerlo, hazlo a baja velocidad y con las luces encendidas, ya que la ceniza dificulta la visibilidad y provoca que el pavimento se vuelva resbaloso.</li>
+    <li>Durante la caída de ceniza volcánica, evita que los menores realicen actividades al aire libre.</li>
+    </div>
+  </div>
   <div data-role="main" class="ui-content">
   <div data-role="collapsible" data-content-theme="false">
+  <h1>IMAGEN</h1>
+  <div>
+  <p>Esta es una imagen:
+  <p>sobre las medidas de preventivas de la ceniza 
+  <br>
+  </div>
+  <div>
+  <img src="imagenes/imagen14.jpg" width="50%" height="50%"> </div>
+  </div>
+  </div>
+  <h2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE ERUPCION</CENTER></h2>
+   <h2><center>MEDIDAS PREVENTIVAS ANTES DE QUE EL VOLCAN HAGA ERUPCION</center></h2>
+<li>Infórmate si tu vivienda, sitio donde trabajas o estudias está en zona de peligro en caso de erupción</li>
+<li>Discute con tu familia, amigos y vecinos sobre lo que podrían hacer frente a los diferentes peligros volcánicos, es decir armar un plan de contingencia.</li>
+<li>Participa en simulacros programados por autoridades para poner a prueba tu plan de contingencia</li>
+<li>Si tienes cualquier duda sobre los peligros volcánicos, pide ayuda a los expertos del Instituto Geofísico.</li>
+  <center><img src="imagenes/imagen15.jpg" width="50%" height="50%"></center>
+  <h4><center>CUANDO UN VOLCAN VA A HACER ERUPCION</center></h4>
+  <LI>Revisa tu plan de contingencia</LI>
+  <LI>No creer rumores o  información proporcionada por gente no autorizada</LI>
+  <LI>Preparar un kit de emergencia: radio portátil, linterna con pilas, botiquín, agua embotellada, alimentos que puedan consumirse sin cocinar, abrelatas/cuchillo, copias de tus documentos, lista de teléfonos importantes</LI>
+<LI>Trata de mantenerte cerca de tu familia.</LI>
+<LI>Preocuparte por tu buen estado y seguridad, ya que solo entonces podrás brindar ayuda efectiva a los demás.</LI>
+<LI>
+  <div align="center"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image12','','imagenes/imagen16.jpg',1)"><img src="imagenes/imagen17.jpg" width="299" height="168" id="Image12"></a></div>
+</LI>
+  <div data-role="main" class="ui-content">
+    <div data-role="collapsible" data-content-theme="false">
   <h1>INFORMACION ACERCA DE LAS FASES DEL VOLCAN POPOCATEPETL</h1>
   <div>
   <p>Esta es alguna informacion sobre las fases:
   <H2><CENTER>El color amarillo se divide en tres fases:</CENTER><H2>
   <p>FASE 1: </p>
-  <p>asfdsgdfghrththtytyjuyjyjyujyjyjty </p>
-  <P>FASE 2 </P>
+  <p>asfdsgdfghrththtytyjuyjyjyujyjyjty </p
+  ><P>FASE 2 </P>
   <p>bbjhghghfghvghvghvg</p>
   <P>FASE 3 </P>
   <p>hjgbjhgghvgcgcvg</p>
-  <H2><CENTER>El color rojo se divide en tres fases:</CENTER><H2>
+  <H2>
+  <img src="imagenes/fase1.jpg" width="45%" height="50%" align="middle">
+  <CENTER>
+    El color rojo se divide en tres fases:</CENTER><H2>
   <p> fase 1 </p>
   <p>hbjvgcfgcfcfc</p>
   <p> fase 2 </p>
@@ -241,7 +397,8 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
   <p>bhjbhgfvghvghvgcgfcfg</p>
   <p> fase 3 </p>
   <p>jhghgvghvgvg</p>
-  <H2><CENTER>El color amarillo se divide en tres fases:</CENTER><H2>
+  <img src="imagenes/fase2.jpg" width="50%" height="50%"> 
+  <H2><CENTER>El color verde se divide en tres fases:</CENTER><H2>
   <p> fase 1 </p>
   <p>hjbhvbvbnbhggghggh </p>
   <p> fase 2 </p>
@@ -252,88 +409,16 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
   </div>
   <div>
   <CENTER>
-  <img src="imagenes/imagen4.jpg" width="50%" height="50%"> </CENTER> </div>
+  <img src="imagenes/fases.png" width="56%" height="50%"> </CENTER> </div>
   </div>
-  </div>
- <div data-role="footer" data-theme="b">
+</div>
+ <div data-role="footer" data-theme="c">
      <h4>APLICACION 3</h4>
      <h4>VOLCAN POPOCATEPETL</h4>
      <h4>TMM</h4>
-   </div>
-</div>
-</div>
-
-<div data-role="page" id="Pagina5" data-add-back-btn="true" data-theme="c">
-    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-        <h1>UBICACION DEL VOLCAN DE COLIMA</h1>
- </div>
- <div data-role="content" align="center">
-   <div>
-     <P>EscrIBIR LA INFORMACION QUE SE REQUIERE EN ESTE  ESPACIO</P>
-     <p>ghgjjjjjjjjjjjjjjjjjjjjjhhhhhhhhhhh</p>
-       <img src="imagenes/imagen2.jpg" width="50%" height="50%">
-       <P>WFR4WEGY4UTHFU4HTGJKHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
-       FEWFJBHERFGKREGHJRBGHJHRHJGTRHJEG</P>
-     </div>
-     <img src="imagenes/imagen2.jpg" width="50%" height="50%">
- </div>
- <div data-role="footer" data-theme="b">
-    <h4>APLICACION 3</h4>
-    <H4>VOLCAN POPOCATEPETL</H4>
-    <H4>TMM</H4>
   </div>
 </div>
 </div>
 
-<div data-role="page" id="Pagina6" data-add-back-btn="true" data-theme="c">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-  <h1>NOMBRE</h1>
-  </div>
-  <div data-role="content" align="center">
-   <div>
-     <h2>MARGARITA TORRES MORLAN</h2>
-  </div>
-  </div>
-  <div data-role="footer" data-theme="b">
-  <h4>APLICACION 3</h4>
-  <H4>VOLCAN POPOCATEPETL</H4>
-  <H4>TMM</H4>
-  </div>
-</div>
-</div>
-
-<div data-role="page" id="Pagina7" data-add-back-btn="true" data-theme="c">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-  <h1>NOMBRE</h1>
-  </div>
-  <div data-role="content" align="center">
-   <div>
-     <h2>MARGARITA TORRES MORLAN</h2>
-  </div>
-  </div>
-  <div data-role="footer" data-theme="b">
-  <h4>APLICACION 3</h4>
-  <H4>VOLCAN POPOCATEPETL</H4>
-  <H4>TMM</H4>
-  </div>
-</div>
-</div>
-
-<div data-role="page" id="Pagina8" data-add-back-btn="true" data-theme="c">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-  <h1>NOMBRE</h1>
-  </div>
-  <div data-role="content" align="center">
-   <div>
-     <h2>MARGARITA TORRES MORLAN</h2>
-  </div>
-  </div>
-  <div data-role="footer" data-theme="b">
-  <h4>APLICACION 3</h4>
-  <H4>VOLCAN POPOCATEPETL</H4>
-  <H4>TMM</H4>
-  </div>
-</div>
-</div>
 </body>
 </html>
