--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div>
     <!-- Start WOWSlider.com -->
-<iframe src="visor/indexwow.html" style="width:960px;height:150px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor/indexwow.html" style="width:960px;height:100px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
   </div>
   <div></div>
@@ -165,7 +165,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
       <p>Durante la noche se observó ligera incandescencia sobre el cráter, que aumentaba al momento de las exhalaciones más importantes. 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
         <img src="imagenes/imagen9.jpg" width="50%" height="50%">
- <p><a href="proyecto 1.2.HTML">Ir a pagina de reciclaje</a>/<p>
+ <p><a href="http://www.cenapred.gob.mx/es/">Ir a pagina de reciclaje</a>/<p>
    </div>
  </div>
  <div data-role="main" class="ui-content">
@@ -275,7 +275,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
         <h1>UBICACION DEL VOLCAN DE COLIMA</h1>
  </div>
  <!-- Start WOWSlider.com -->
-<iframe src="visor2/indexwow2.html" style="width:960px;height:150px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor2/indexwow2.html" style="width:960px;height:100px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
  <div data-role="content" align="center">
    <div>
