--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
         <img src="imagenes/imagen9.jpg" width="50%" height="50%">
         <p>has clic abajo para que puedas ver mas imformacion : </p>
- <p><a href="http://www.cenapred.gob.mx/es/">http://www.cenapred.gob.mx/es/</a>/<p>
+ <p><a href="http://www.cenapred.gob.mx/es/">http://www.cenapred.gob.mx/es</a>/<p>
    </div>
  </div>
  <div data-role="main" class="ui-content">
