--- a/index.html
+++ b/index.html
@@ -194,16 +194,17 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
       <h1>Medidas Preventivas en caso de caida de ceniza y en caso de erupcion</h1>
  </div>
- <div data-role="content" align="center">
+ <div data-role="content" align="left">
     <div>
-          <H2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE CAIDA DE CENIZA</CENTER></H2>
-     <li>No humedecer la ceniza a fin de evitar taponamientos en el sistema de alcantarillado</li>
+     <H2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE CAIDA DE CENIZA</CENTER></H2>
+     <letf><li>No humedecer la ceniza a fin de evitar taponamientos en el sistema de alcantarillado</li>
      <li>Mantén la calma.</li>
      <li>Utiliza medios electrónicos y de comunicación para obtener información confiable que den las autoridades de Protección Civil sobre la caída de ceniza y atiende siempre sus instrucciones</li>
      <li>No realices actividades al aire libre y si es posible no salgas.</li>
-     <li>Cierra puertas y ventanas y coloca toallas o trapos húmedos en las rendijas.</li>
-      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/imagen12.jpg',1)"><img src="imagenes/imagen11.jpg" width="272" height="185" id="Image7"></a></p> <li>Si es posible no conduzcas, si tienes que hacerlo, hazlo a baja velocidad y con las luces encendidas, ya que la ceniza dificulta la visibilidad y provoca que el pavimento se vuelva resbaloso.</li>
-    <li>Durante la caída de ceniza volcánica, evita que los menores realicen actividades al aire libre.</li>
+     <li>Cierra puertas y ventanas y coloca toallas o trapos húmedos en las rendijas.</li></left>
+      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/imagen12.jpg',1)"><img src="imagenes/imagen11.jpg" width="272" height="185" id="Image7"></a></p>
+     <letf> <li>Si es posible no conduzcas, si tienes que hacerlo, hazlo a baja velocidad y con las luces encendidas, ya que la ceniza dificulta la visibilidad y provoca que el pavimento se vuelva resbaloso.</li>
+    <li>Durante la caída de ceniza volcánica, evita que los menores realicen actividades al aire libre.</li></left>
     </div>
   </div>
   <div data-role="main" class="ui-content">
@@ -220,47 +221,46 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
   </div>
   <h2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE ERUPCION</CENTER></h2>
    <h2><center>MEDIDAS PREVENTIVAS ANTES DE QUE EL VOLCAN HAGA ERUPCION</center></h2>
-   <li>Infórmate si tu vivienda, sitio donde trabajas o estudias está en zona de peligro en    casode erupción</li>
-   <li>Discute con tu familia, amigos y vecinos sobre lo que podrían hacer frente a los    diferentes peligros volcánicos, es decir armar un plan de contingencia.</li>
-   <li>Participa en simulacros programados por autoridades para poner a prueba tu plan de    contingencia</li>
-   <li>Si tienes cualquier duda sobre los peligros volcánicos, pide ayuda a los expertos del    Instituto Geofísico.</li>
+   <left><li>Infórmate si tu vivienda, sitio donde trabajas o estudias está en zona de peligro en caso de erupción</li>
+   <li>Discute con tu familia, amigos y vecinos sobre lo que podrían hacer frente a los diferentes peligros volcánicos, es decir armar un plan de contingencia.</li>
+   <li>Participa en simulacros programados por autoridades para poner a prueba tu plan de contingencia</li>
+   <li>Si tienes cualquier duda sobre los peligros volcánicos, pide ayuda a los expertos del Instituto Geofísico.</li> </left>
   <center><img src="imagenes/imagen15.jpg" width="50%" height="50%"></center>
   <h4><center>CUANDO UN VOLCAN VA A HACER ERUPCION</center></h4>
-  <LI>Revisa tu plan de contingencia</LI>
+ <left><LI>Revisa tu plan de contingencia</LI>
   <LI>No creer rumores o  información proporcionada por gente no autorizada</LI>
   <LI>Preparar un kit de emergencia: radio portátil, linterna con pilas, botiquín, agua embotellada, alimentos que puedan consumirse sin cocinar, abrelatas/cuchillo, copias de tus documentos, lista de teléfonos importantes</LI>
 <LI>Trata de mantenerte cerca de tu familia.</LI>
-<LI>Preocuparte por tu buen estado y seguridad, ya que solo entonces podrás brindar ayuda efectiva a los demás.</LI>
-<LI>
+<LI>Preocuparte por tu buen estado y seguridad, ya que solo entonces podrás brindar ayuda efectiva a los demás.</LI></left>
   <div align="center"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image12','','imagenes/imagen16.jpg',1)"><img src="imagenes/imagen17.jpg" width="299" height="168" id="Image12"></a></div>
-</LI>
+
   <div data-role="main" class="ui-content">
     <div data-role="collapsible" data-content-theme="false">
   <h1>INFORMACION ACERCA DE LAS FASES DEL VOLCAN POPOCATEPETL</h1>
   <div>
   <p>Esta es alguna informacion sobre las fases:
-  <H2><CENTER>FASE COLOR VERDE:</CENTER><H2>
+  <H2><CENTER>FASE COLOR VERDE:</CENTER></H2>
   <p>El volcán se encuentra en un estado no-eruptivo;
  o, después de un cambio desde un nivel más alto:
 se considera que la actividad volcánica ha cesado y el volcán ha vuelto a su estado normal, no-eruptivo.</p>
-  <img src="imagenes/fases.png" width="45%" height="50%" align="middle">
-  <H2><CENTER>FASE COLOR AMARILLO</CENTER><H2>
+  <img src="imagenes/faseverde.jpg" width="45%" height="50%" align="middle">
+  <H2><CENTER>FASE COLOR AMARILLO</CENTER></H2>
   <p>El volcán experimenta un aumento significativo de  la actividad volcánica;
 o, después de un cambio desde un nivel más alto:
 la actividad volcánica ha disminuido considerablemente, pero se recomienda precaucción</p>
   <img src="imagenes/fase1.jpg" width="50%" height="50%"> 
-  <H2><CENTER>FASE COLOR NARANJA:</CENTER><H2>
+  <H2><CENTER>FASE COLOR NARANJA:</CENTER></H2>
   <p>El volcán muestra un aumento en la actividad volcánica con probabilidades de erupción
 o, después de un cambio desde un nivel más alto:
 erupción en proceso con apenas emisión de cenizas (especificar la altura de la columna de cenizas si fuera posible)</p>
-<img src="imagenes/fase1.jpg" width="50%" height="50%"> 
+<img src="imagenes/fasenaranja.jpg" width="50%" height="50%"> 
 <H2><CENTER>FASE COLOR ROJO </CENTER></H2>
 <P>Se preve que la erupción será inminente con probabilidades de emisión significativa de cenizas a la atmósfera o,erupción en proceso con emisión significativa de cenizas (especificar la altura de la columna de cenizas si fuera posible)</P>
   <br>
   </div>
   <div>
   <CENTER>
- <img src="imagenes/fase1.jpg" width="50%" height="50%">  </CENTER> </div>
+ <img src="imagenes/fase2.jpg" width="50%" height="50%">  </CENTER> </div>
   </div>
 </div>
  <div data-role="footer" data-theme="c">
