--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function MM_swapImage() { //v3.0
    </li>
    <li class="ui-first-child ui-last-child">
       <a href="#Pagina6" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-      <h2>Dimensiones del vocan de colima</h2>
+      <h2>Dimensiones del volcan de colima</h2>
       <p>Muestra las dimensiones del volcan de colima </p>
       </a>
   </li>
@@ -166,7 +166,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
         <img src="imagenes/imagen9.jpg" width="50%" height="50%">
         <p>has clic abajo para que puedas ver mas imformacion : </p>
- <p><a href="http://www.cenapred.gob.mx/es/">http://www.cenapred.gob.mx/es</a>/<p>
+ <p><a href="http://www.cenapred.gob.mx/es/">http://www.cenapred.gob.mx/es/</a>/<p>
    </div>
  </div>
  <div data-role="main" class="ui-content">
@@ -295,7 +295,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
 
 <div data-role="page" id="Pagina6" data-add-back-btn="true" data-theme="c">
   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-  <h1>Dimensiones del vocan de colima</h1>
+  <h1>Dimensiones del volcan de colima</h1>
   </div>
   <div data-role="content" align="center">
    <div>
