--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
 <div data-role="page" id="Pagina3" data-add-back-btn="true" data-theme="c">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
     <h1>Dependencias del monitoreo del volcan popocatepetl</h1>
- </div>
+ </div>s
  <div data-role="content" align="center">
    <div>
       <p>En las últimas 24 horas, por medio de los registros sísmicos del sistema de monitoreo del volcán Popocatépetl, se identificaron 88 exhalaciones de muy baja intensidad, que solo fueron acompañadas por emisiones de vapor de agua y gases.</p>
@@ -166,7 +166,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
         <img src="imagenes/imagen9.jpg" width="50%" height="50%">
         <p>has clic abajo para que puedas ver mas imformacion : </p>
- <p><a href="http://www.cenapred.gob.mx/es/">http://www.cenapred.gob.mx/es/</a>/<p>
+ <p><a href="http://www.cenapred.gob.mx">http://www.cenapred.gob.mx</a>/<p>
    </div>
  </div>
  <div data-role="main" class="ui-content">
