--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
         <p>has clic abajo para que puedas ver mas imformacion : </p>
  <p><a href="http://www.cenapred.gob.mx">http://www.cenapred.gob.mx</a><p>
  <br>
- <a href="https://www.facebook.com">Facebook</a>
+ <a href="https://www.facebook.com"><img src="imagenes/imagen9.jpg" width="50%" height="50%"></a>
    </div>
  </div>
  <div data-role="main" class="ui-content">
